Add Gold Sponsor relocate transport info

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -186,6 +186,7 @@
     </div>
     </div>
 
+    <!--
     <div id="transport" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
@@ -202,6 +203,7 @@
       </div>
     </div>
     </div>
+    -->
 
     <div id="venue" class="non-jumbo text-center">
       <div class="container">
@@ -232,6 +234,14 @@
 
       </div>
     </div>
+          <div class="row">
+            <div class="col-xs-12" id="telegram">
+            <p>
+            Here is
+            a <a href="https://fedoraproject.org/wiki/GettingAroundInDresden">detailed overview of transportation options and some general information about Dresden</a>.
+            </p>
+      </div>
+      </div>
     </div>
     </div>
 
@@ -265,11 +275,11 @@
             <a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
           </p>
           <br/>
-<!--
           <h3>Gold Level</h3>
           <p>
-            <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
+            <a href="https://www.arm.com/"><img src="../../static/images/Arm_logo_blue_150MN.png"/></a>
           </p>
+<!--
           <p>
             <a href="https://developer.capitalone.com/open-source/"><img src="../../static/images/capitalone-devexchange.png"/></a>
           </p>
