Add Powered by AWS logo
Signed-off-by: Patrick Uiterwijk <puiterwijk@redhat.com>

--- a/fedoraproject.org/data/content/sponsors.html
+++ b/fedoraproject.org/data/content/sponsors.html
@@ -52,6 +52,7 @@
                     <li style="width: 150px;"><a href="http://www.colocationamerica.com"><img src="${path}/static/images/sponsors/colocation-america-logo.png" alt="ColocationAmerica" /></a></li>
                     <li style="width: 122px;"><a href="http://www.internetx.com/"><img src="${path}/static/images/sponsors/internetx.png" alt="InterNetX" /></a></li>
                     <li style="width: 250px;"><a href="http://www.host1plus.com"><img src="${path}/static/images/sponsors/host1plus.jpg" alt="host1plus" /></a></li>
+                    <li style="width: 250px;"><a href="https:/aws.amazon.com"><img src="${path}/static/images/sponsors/PB_AWS_logo_RGB.jpg" alt="AWS" /></a></li>
                </ul>
 		<div class="clear"></div>
 </div>
