add flock breakfast note

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -213,7 +213,7 @@
           <div class="col-xs-12 col-md-7">
           <p><a href="https://www.radissonblu.com/en/parkhotel-dresdenradebeul">The Radisson Blu Park Hotel &amp; Conference Centre, Dresden Radebeul, Germany</a> is both the conference venue as well as the conference hotel.</p>
 	  <ul style="padding-left: 1em;">
-          <li>Flock Conference room rates of <strong>100 EUR/night</strong> per double occupancy room and <strong>75 EUR/night</strong> per single occupancy room have been arranged.</li>
+          <li>Flock Conference room rates of <strong>100 EUR/night</strong> per double occupancy room and <strong>75 EUR/night</strong> per single occupancy room have been arranged. Rooms include breakfast</li>
           <li>To obtain the Flock rate, please email <a href="mailto:events@parkhotel-radebeul.com">events@parkhotel-radebeul.com</a> with your name, contact details, date of arrival and departure and mention the "Flock Fedora Conference."  You will receive a confirmation and reservation number back by email.</li>
 <!--
     <li><strong><strike>July 26</strike>August 4 - Extended</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
