--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -33,6 +33,7 @@
           <p>Flock is the Fedora Project's annual contributor-focused conference. It alternates between European and North American locations. The conference provides a venue for face to face meetings and conversations.  It is also a place to celebrate our community.</p>
 
           <h2>What will we do at Flock?</h2>
+          <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
           <ul>
               <li align="left"><b>Communicate the Fedora Strategy.</b> Everyone in Fedora should understand and feel well-aligned with the project's goals, both long-term and tactical. We should all understand the messaging we're using to attract new users and contributors.m</li>
               <li align="left"><b>Plan the Next Strategy.</b> This strategy doesn't come from the top down, or from thin air, and it's not dictated by our sponsors. It comes from the community. Because we're so big and distributed, Flock can't be the only place where we get new ideas, but it is a summit where we present, learn about, and discuss them.</li>
@@ -89,7 +90,11 @@
               </tr>
             </table>
 
+            <h2>Schedule</h2>
+            <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
+<!--
             <h2>Tentative Schedule</h2>
+            <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
             <ul>
                 <li align="left"><p><b>Day 1, morning:</b> Kickoff. We'll start with a joint session about the state of Fedora in 2018, priorities for the next year, and messaging the Fedora Council would like emphasized. Then, we will have a series of 20-minute presentations from each of the Fedora Editions, as well as from the current Fedora Objectives — IoT, CI, and Modularity.</p></li>
                 <li align="left"><p><b>Day 1, afternoon:</b> New Ideas Talks. These sessions will be preselected presentations. Additionally, presenters should tell us who they need to be in the room to discuss / convince / get involved.</p></li>
@@ -99,6 +104,7 @@
                 <li align="left"><p><b>Day 4, morning:</b> Hackfests continue.</p></li>
                 <li align="left"><p><b>Day 4, afternoon:</b> Wrap Up / Readout session. Leadership panel followed by five-minute summaries from the various breakouts.</p></li>
             </ul>
+-->
         </div>
       </div>
     </div>
@@ -109,6 +115,8 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2>Call for Proposals</h2>
+            <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
+ <!-- 
             <p>We invite you to submit proposals for talks (60 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
             <p>Topic ideas include:</p>
             <ul>
@@ -126,6 +134,7 @@
                 <li align="left"><p>Round 2 selection starts on: 2 July 2018</p></li>
                 <li align="left"><p>Final selection starts on: 15 July 2018 (absolute last day for CFP submission)</p></li>
             </ol>
+ -->
         </div>
       </div>
     </div>
@@ -136,12 +145,16 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
+          <p><mark>Late Registration for Flock is still open.</mark>  You may also register on-site.  Late registrants are not guranteed all benefits of registration including swag and food.  These will provided if we have capacity.  This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
+          <p>We are no longer issuing visa letters as the event is less than one month away.  All travel funding has been issued.</p>
+<!--
           <p><mark>Registration for Flock is open.</mark></p>
           <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now. If you need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/13ndmY6f69nUh42lJTqcLMhPNmM8vrqlwGhqF0dc-Vxg/edit">Visa Letter Request Form</a>.</p>
           <p>Flock 2018 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
           <p>If you need travel funding for Flock, you may apply using the <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9KR0oXmBiIl2I12hn3dln2795zDCFSMEFf9rtGngd7pl1dQ/viewform?usp=sf_link">funding request form</a>. You can (and should) wait to register until you have received your funding decision.  Funding decisions begin being made on 25 June, 2018 and will be made on a continuously rolling basis from then.</p>
-          <p>Attendees who registered and paid the registration fee by July 2, 2017 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
+          <p>Attendees who registered and paid the registration fee by July 2, 2018 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
           <p>If you did not register, you are still welcome to attend the conference and events. However, you will not receive benefits such as lunch and a shirt.</p>
+-->
         </div>
       </div>
     </div>
