Replace 'Atomic Workstation' with 'Silverblue'

--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -177,15 +177,15 @@
           </py:choose>
           </div>
 
-          <!-- Atomic Workstation -->
+          <!-- Fedora Silverblue -->
           <div class="top-space bottom-margin">
             <div class="prerelease-box">
-              <h4>${_('Try Atomic Workstation')}</h4>
-              <p>${_('Atomic provides an immutable OS image and updates via OSTree.')}</p>
+              <h4>${_('Try Fedora Silverblue')}</h4>
+              <p>${_('Silverblue provides an immutable OS image and updates via OSTree.')}</p>
               <p><i class="fa fa-fw fa-sm header-icon fa-download"></i>
-                <a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/AtomicWorkstation/x86_64/iso/Fedora-AtomicWorkstation-ostree-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('64-bit %sGB Atomic image')) % global_variables.iso_size['x64_atomic_workstation']}</a>
+                <a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Silverblue/x86_64/iso/Fedora-Silverblue-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('64-bit %sGB Silverblue image')) % global_variables.iso_size['x64_silverblue']}</a>
               </p>
-              <p><i class="fa fa-fw fa-sm header-icon fa-book"></i><a href="//fedoraproject.org/wiki/Workstation/AtomicWorkstation">${_('Learn more')}</a></p>
+              <p><i class="fa fa-fw fa-sm header-icon fa-book"></i><a href="//silverblue.fedoraproject.org/">${_('Learn more')}</a></p>
             </div>
           </div>
 
