[iot] update docs link
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/iot.fedoraproject.org/data/content/index.html
+++ b/iot.fedoraproject.org/data/content/index.html
@@ -177,7 +177,7 @@
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('Fedora Internet of Things Edition documentation and installation guides are available at the &lt;a href="%s"&gt;Fedora IoT wiki page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/InternetOfThings'))}</p>
+          <p>${Markup(_('Fedora Internet of Things Edition documentation and installation guides are available at the &lt;a href="%s"&gt;Fedora IoT documentation page&lt;/a&gt;.') % ('https://docs.fedoraproject.org/en-US/iot/'))}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
