hide some labs that have no f29 ga builds
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -68,13 +68,21 @@
         </div>
        </div>
 
-       <div class="row top-margin high">
+       <div class="row top-margin high bottom-space">
+        <div class="col-md-5 col-md-offset-1 text-center fadescreen">
+          <div class="spin-banner"><a href="/${lang}/scientific"><img class="screenshot-banner" src="${path}/static/images/scientific-banner.png" alt="Scientific Lab banner" /></a></div>
+          <a href="/${lang}/scientific"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-scientific.jpg" alt="Scientific-KDE Lab Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/scientific"><h3>${_('Open source scientific computing.')}</h3></a>
+          <span class="grey">${_('A bundle of open source scientific and numerical tools used in research.')}</span></div>
+        </div>
+        <!--
         <div class="col-md-5 col-md-offset-1 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/games"><img class="screenshot-banner" src="${path}/static/images/games-banner.png" alt="Games banner" /></a></div>
           <a href="/${lang}/games"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-games.jpg" alt="Games Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/games"><h3>${_('Play with Fedora Today!')}</h3></a>
           <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
         </div>
+        -->
         <div class="col-md-5 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
           <a href="/${lang}/jam"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-jam.jpg" alt="Jam Screenshot" /></a>
@@ -82,6 +90,8 @@
           <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
        </div>
+
+<!-- these don't have f29 builds...
 
        <div class="row top-margin high">
         <div class="col-md-5 col-md-offset-1 text-center fadescreen">
@@ -112,6 +122,7 @@
           <span class="grey">${_('A safe test environment to work on security auditing, forensics, system rescue and teaching security testing methodologies.')}</span></div>
         </div>
        </div>
+  -->
 
       </div>
 	  </div>
@@ -134,6 +145,7 @@
           <span class="grey">${_('Visual design, multimedia production, and publishing suite of free and open source creative tools.')}</span></div>
         </div>
       </div>
+<!--
       <div class="row top-margin">
         <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/games"><img class="screenshot-banner" src="${path}/static/images/games-banner.png" alt="Games banner" /></a></div>
@@ -142,6 +154,7 @@
           <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
         </div>
       </div>
+-->
       <div class="row top-margin">
         <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
@@ -150,6 +163,7 @@
           <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
         </div>
       </div>
+<!--
       <div class="row top-margin">
         <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/python-classroom"><img class="screenshot-banner" src="${path}/static/images/python-classroom/python-classroom-banner.png" alt="Python Classroom banner" /></a></div>
@@ -166,7 +180,8 @@
           <span class="grey">${_('A wide variety of free and open robotics software packages for beginners and experts in robotics.')}</span></div>
         </div>
       </div>
-      <div class="row bottom-space top-margin">
+-->
+      <div class="row bottom-space top-margin bottom-space">
         <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/scientific"><img class="screenshot-banner" src="${path}/static/images/scientific-banner.png" alt="Scientific Lab banner" /></a></div>
           <a href="/${lang}/scientific"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-scientific.jpg" alt="Scientific-KDE Lab Screenshot" /></a>
@@ -174,6 +189,7 @@
           <span class="grey">${_('A bundle of open source scientific and numerical tools used in research.')}</span></div>
         </div>
       </div>
+<!--
       <div class="row bottom-space top-margin">
         <div class="col-xs-12 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/security"><img class="screenshot-banner" src="${path}/static/images/security-lab-banner.png" alt="Security Lab banner" /></a></div>
@@ -182,6 +198,7 @@
           <span class="grey">${_('A safe test environment to work on security auditing, forensics, system rescue and teaching security testing methodologies.')}</span></div>
         </div>
       </div>
+-->
     </div>
 
   </header>
