--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -120,7 +120,7 @@
                 <div class="jumbotron fedora">
                   <h3>${_('Linux')}</h3>
                       <p>${Markup(_('Available via DNF for &lt;strong&gt;Fedora&lt;/strong&gt;'))}<br />
-                      <a href="https://fedoraproject.org/wiki/How_to_create_and_use_Live_USB" role="button">(${_('More details')})</a></p>
+                      <a href="https://docs.fedoraproject.org/en-US/quick-docs/dnf-system-upgrade/" role="button">(${_('More details')})</a></p>
                 </div>
                 <div class="jumbotron linux">
                       <p>${Markup(_('64-bit %s GB ISO for &lt;strong&gt;Linux&lt;/strong&gt;.')) % global_variables.iso_size['x86_64_workstation']}<br />
