update silverblue link
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -187,7 +187,7 @@
               <h4>${_('Try Fedora Silverblue')}</h4>
               <p>${_('Silverblue provides an immutable OS image and updates via OSTree.')}</p>
               <p><i class="fa fa-fw fa-sm header-icon fa-download"></i>
-                <a class="ws-download-splash" href="${global_variables.path['download']}/test/${global_variables.release['curr_silverblue_id']}_${global_variables.release['curr_state']}/Silverblue/x86_64/iso/Fedora-Silverblue-ostree-x86_64-${global_variables.release['curr_silverblue_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso">${Markup(_('64-bit %sGB Silverblue image')) % global_variables.iso_size['x64_silverblue']}</a>
+                <a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_silverblue_id']}/Silverblue/x86_64/iso/Fedora-Silverblue-ostree-x86_64-${global_variables.release['curr_silverblue_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('64-bit %sGB Silverblue image')) % global_variables.iso_size['x64_silverblue']}</a>
               </p>
               <p><i class="fa fa-fw fa-sm header-icon fa-book"></i><a href="//silverblue.fedoraproject.org/">${_('Learn more')}</a></p>
             </div>
