Fix AH media Checksum link and update Cloud-base AMIs
* First F29 Atomic Host Two Week release was done
  from compose directory /compose/twoweek/ instead of
  compose/updates/. Adjusted Checksum links accordingly
* Fedmsg for Fedora 29 Cloud-base AMIs for us-east-2
  and eu-west-3 regions were missing and hence added
  manually AMI IDs

Signed-off-by: Sinny Kumari <sinny@redhat.com>

--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -71,9 +71,9 @@
               <div class="btn btn-default btn-topmargin btn-verify btn-checksum">
                 ${_('For Atomic Host ISOs')}
                 <div>
-                <a href="${global_variables.path['download_atomic']}/stable/Fedora-${global_variables.release['curr_atomic_id']}-updates-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM" style="display:inline;">${_('x86_64')}</a> |
-                <a href="${global_variables.path['download_atomic']}/stable/Fedora-${global_variables.release['curr_atomic_id']}-updates-${global_variables.release['atomic_composedate']}/AtomicHost/aarch64/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-aarch64-CHECKSUM" style="display:inline;">${_('aarch64')}</a> |
-                <a href="${global_variables.path['download_atomic']}/stable/Fedora-${global_variables.release['curr_atomic_id']}-updates-${global_variables.release['atomic_composedate']}/AtomicHost/ppc64le/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-ppc64le-CHECKSUM" style="display:inline;">${_('ppc64le')}</a>
+                <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM" style="display:inline;">${_('x86_64')}</a> |
+                <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/aarch64/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-aarch64-CHECKSUM" style="display:inline;">${_('aarch64')}</a> |
+                <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/ppc64le/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-ppc64le-CHECKSUM" style="display:inline;">${_('ppc64le')}</a>
                 </div>
               </div>
             </div>
@@ -82,9 +82,9 @@
                 ${_('For Atomic Host images')}
                 
                 <div>
-                  <a href="${global_variables.path['download_atomic']}/stable/Fedora-${global_variables.release['curr_atomic_id']}-updates-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM" style="display:inline;">${_('x86_64')}</a> |
-                  <a href="${global_variables.path['download_atomic']}/stable/Fedora-${global_variables.release['curr_atomic_id']}-updates-${global_variables.release['atomic_composedate']}/AtomicHost/aarch64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-aarch64-CHECKSUM" style="display:inline;">${_('aarch64')}</a> |
-                   <a href="${global_variables.path['download_atomic']}/stable/Fedora-${global_variables.release['curr_atomic_id']}-updates-${global_variables.release['atomic_composedate']}/AtomicHost/ppc64le/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-ppc64le-CHECKSUM" style="display:inline;">${_('ppc64le')}</a>
+                  <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM" style="display:inline;">${_('x86_64')}</a> |
+                  <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/aarch64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-aarch64-CHECKSUM" style="display:inline;">${_('aarch64')}</a> |
+                   <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/ppc64le/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-ppc64le-CHECKSUM" style="display:inline;">${_('ppc64le')}</a>
                 </div>
               </div>
             </div>
