Update multimedia applications for Cinnamon spin

--- a/spins.fedoraproject.org/data/content/cinnamon/index.html
+++ b/spins.fedoraproject.org/data/content/cinnamon/index.html
@@ -111,19 +111,19 @@
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/cinnamon/xplayer.png" alt="XPlayer" />
-          <h4>${_('XPlayer')}</h4>
+          <img src="${path}/static/images/cinnamon/parole.png" alt="Parole" />
+          <h4>${_('Parole')}</h4>
           <p>${_('A modern media player, using gtk3 and the gstreamer plugin framework.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/cinnamon/pix.png" alt="Pix" />
-          <h4>${_('Pix')}</h4>
-          <p>${_('Pix is an image browser, viewer, organizer and editor.')}</p>
+          <img src="${path}/static/images/cinnamon/shotwell.png" alt="Shotwell" />
+          <h4>${_('Shotwell')}</h4>
+          <p>${_('Shotwell is an easy-to-use, fast photo organizer and editor.')}</p>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
-          <img src="${path}/static/images/cinnamon/brasero.png" alt="Brasero" />
-          <h4>${_('Brasero')}</h4>
-          <p>${_('Brasero is a simple and easy to use CD/DVD burning application.')}</p>
+          <img src="${path}/static/images/cinnamon/xfburn.png" alt="Xfburn" />
+          <h4>${_('Xfburn')}</h4>
+          <p>${_('Xfburn is a simple CD/DVD burning tool')}</p>
         </div>
       </div>
     </div>
