--- a/spins.fedoraproject.org/data/content/cinnamon/index.html
+++ b/spins.fedoraproject.org/data/content/cinnamon/index.html
@@ -123,7 +123,7 @@
         <div class="col-md-4 col-xs-12 text-center">
           <img src="${path}/static/images/cinnamon/xfburn.png" alt="Xfburn" />
           <h4>${_('Xfburn')}</h4>
-          <p>${_('Xfburn is a simple CD/DVD burning tool')}</p>
+          <p>${_('Xfburn is a simple CD/DVD burning tool.')}</p>
         </div>
       </div>
     </div>
